add validate exist email
