# mobile_shop_api/routes/api.php
@@ -1,8 +1,8 @@
 <?php
 
-use App\Http\Controllers\Auth\ForgotPasswordController;
 use App\Http\Controllers\Auth\LoginController;
 use App\Http\Controllers\Auth\RegisterController;
+use App\Http\Controllers\Auth\ResetPasswordController;
 use App\Http\Controllers\Auth\UserController;
 use App\Http\Controllers\Auth\VerificationController;
 use Illuminate\Http\Request;
@@ -22,9 +22,9 @@ use Illuminate\Support\Facades\Route;
 Route::post('register', [RegisterController::class, 'register']);
 Route::post('login', [LoginController::class, 'login']);
 
-Route::get('password/forgot', [ForgotPasswordController::class, 'forgot']);
-Route::post('password/reset', [ForgotPasswordController::class, 'reset']);
-Route::get('password/token', [ForgotPasswordController::class, 'getToken'])->name('password.reset');
+Route::get('password/forgot', [ResetPasswordController::class, 'forgot']);
+Route::post('password/reset', [ResetPasswordController::class, 'reset']);
+Route::get('password/token', [ResetPasswordController::class, 'getToken'])->name('password.reset');
 
 Route::group(['middleware' => 'auth:sanctum'], function () {
     Route::get('user', [UserController::class, 'getUser']);
